@@ -524,13 +524,7 @@ public class JUMPConfiguration implements Setup {
                         .createEnableCheck(workbenchContext));
         layerNamePopupMenu.addSeparator(); // ===================
         
-        featureInstaller.addPopupMenuItem(layerNamePopupMenu,
-                removeSelectedLayersPlugIn, removeSelectedLayersPlugIn
-                        .getName(), false, RemoveSelectedLayersPlugIn.ICON, removeSelectedLayersPlugIn
-                        .createEnableCheck(workbenchContext));
-        
-        layerNamePopupMenu.addSeparator(); // ===================
-        
+             
         featureInstaller.addPopupMenuItem(layerNamePopupMenu,
                 zoomToLayerPlugIn, zoomToLayerPlugIn.getName(), false, ZoomToLayerPlugIn.ICON,
                 zoomToLayerPlugIn.createEnableCheck(workbenchContext));
@@ -605,7 +599,11 @@ public class JUMPConfiguration implements Setup {
                         .getNameWithMnemonic(), false, copySelectedLayersPlugIn.ICON,
                 copySelectedLayersPlugIn.createEnableCheck(workbenchContext));
         
-
+        featureInstaller.addPopupMenuItem(layerNamePopupMenu,
+                removeSelectedLayersPlugIn, removeSelectedLayersPlugIn
+                        .getName(), false, RemoveSelectedLayersPlugIn.ICON, removeSelectedLayersPlugIn
+                        .createEnableCheck(workbenchContext));
+        
         layerNamePopupMenu.addSeparator(); // ===================
         featureInstaller.addPopupMenuItem(layerNamePopupMenu,
                 addNewFeaturesPlugIn, addNewFeaturesPlugIn.getName() + "...",
