@@ -1,5 +1,9 @@
 # for display continuity sake please use 2 spaces instead of tabs
 
+2012-12-06  Giuseppe Aruta (giuseppe_aruta@yahoo.it)
+  * Add icon to ToggleVisibilityPlugInr plugin
+  * Move Delete selected layer plugin from top to bottom layer menu (test - Modify JUMPConfiguration.java)
+
 2012-12-04 mmichaud <michael.michaud@free.fr>
   * Improved PostGISWriter : solve case sensitivity problem, list table in
     alphabetical order without duplicate. Remember layer to table mapping.
